# streamfer

./: Cargo.toml  README.md
crates/streamfer-core/: Cargo.toml
crates/streamfer-engine/: Cargo.toml
crates/streamfer-engine/example-module/: Cargo.toml  example-component.wasm  wasi_snapshot_preview1.wasm
crates/streamfer-engine/example-module/src/: lib.rs
crates/streamfer-engine/examples/: component.rs
crates/streamfer-engine/src/: lib.rs
crates/streamfer-engine/wit/: infer.wit  streamfer.wit
crates/streamfer-plugin/: Cargo.toml
crates/streamfer-plugin-nvdec/: Cargo.toml
crates/streamfer-plugin-nvdec/src/: lib.rs
crates/streamfer-plugin/examples/: demo.rs
crates/streamfer-plugin/src/: lib.rs
crates/streamfer-server/: Cargo.toml
